jbehaviour-engine/src/main/antlr3/org/jbehaviour/antlr/output/AnotherStoryGrammerParser.java
// $ANTLR 3.4 D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g 2012-11-22 22:17:18

    package org.jbehaviour.antlr;
    import java.io.IOException;
    import java.util.regex.Pattern;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


/**
 * @author Roffin Yannick
 */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AnotherStoryGrammerParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARRAY", "ASAN", "Alphanumeric", "COMMA", "Comment", "Cote", "DECLARE", "Digit", "Dollar", "Dot", "DoubleCote", "Eol", "EscapeSequence", "Exponent", "FALSE", "FEATURE", "FIELD", "GIVEN", "HexDigit", "INCLUDE", "INORDERTO", "IWANTTO", "Identifier", "LeftBrace", "Member", "NULL", "NUMBER", "Number", "OBJECT", "PLUGIN", "REGISTER", "Reference", "RightBrace", "SCENARIO", "STORE", "STRING", "String", "THEN", "TOK_AND", "TOK_ASAN", "TOK_DECLARE", "TOK_FEATURE", "TOK_GIVEN", "TOK_INCLUDE", "TOK_INORDERTO", "TOK_IWANTTO", "TOK_REGISTER", "TOK_SCENARIO", "TOK_STORE", "TOK_TEMPLATE", "TOK_THEN", "TOK_WHEN", "TRUE", "UnderScrore", "UnicodeEscape", "WHEN", "WS", "':'", "'['", "']'", "'false'", "'null'", "'true'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int AND=4;
    public static final int ARRAY=5;
    public static final int ASAN=6;
    public static final int Alphanumeric=7;
    public static final int COMMA=8;
    public static final int Comment=9;
    public static final int Cote=10;
    public static final int DECLARE=11;
    public static final int Digit=12;
    public static final int Dollar=13;
    public static final int Dot=14;
    public static final int DoubleCote=15;
    public static final int Eol=16;
    public static final int EscapeSequence=17;
    public static final int Exponent=18;
    public static final int FALSE=19;
    public static final int FEATURE=20;
    public static final int FIELD=21;
    public static final int GIVEN=22;
    public static final int HexDigit=23;
    public static final int INCLUDE=24;
    public static final int INORDERTO=25;
    public static final int IWANTTO=26;
    public static final int Identifier=27;
    public static final int LeftBrace=28;
    public static final int Member=29;
    public static final int NULL=30;
    public static final int NUMBER=31;
    public static final int Number=32;
    public static final int OBJECT=33;
    public static final int PLUGIN=34;
    public static final int REGISTER=35;
    public static final int Reference=36;
    public static final int RightBrace=37;
    public static final int SCENARIO=38;
    public static final int STORE=39;
    public static final int STRING=40;
    public static final int String=41;
    public static final int THEN=42;
    public static final int TOK_AND=43;
    public static final int TOK_ASAN=44;
    public static final int TOK_DECLARE=45;
    public static final int TOK_FEATURE=46;
    public static final int TOK_GIVEN=47;
    public static final int TOK_INCLUDE=48;
    public static final int TOK_INORDERTO=49;
    public static final int TOK_IWANTTO=50;
    public static final int TOK_REGISTER=51;
    public static final int TOK_SCENARIO=52;
    public static final int TOK_STORE=53;
    public static final int TOK_TEMPLATE=54;
    public static final int TOK_THEN=55;
    public static final int TOK_WHEN=56;
    public static final int TRUE=57;
    public static final int UnderScrore=58;
    public static final int UnicodeEscape=59;
    public static final int WHEN=60;
    public static final int WS=61;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "array", "scenario", "asAnDecl", "elements", "anyDeclEndedByPlugin", 
    "number", "iWantToDecl", "member", "identifier", "scenarioKeyword", 
    "statementDecl", "thenDecl", "members", "inOrderToDecl", "registerDecl", 
    "giveDecl", "andDecl", "includeDecl", "givenKeyword", "anyDecl", "reference", 
    "story", "template", "whenKeyword", "thenKeyword", "pair", "andKeyword", 
    "featureDecl", "jsonValue", "declareDecl", "jsonObject", "string", "storeDecl", 
    "feature", "whenDecl", "integer", "anyStringDecl"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        false, false, false, false, false, false, false, false, false, false, 
        false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public AnotherStoryGrammerParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public AnotherStoryGrammerParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public AnotherStoryGrammerParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return AnotherStoryGrammerParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g"; }


    	enum Situation {
    		none,
    		onGivenKeyword,
    		onWhenKeyword,
    		onThenKeyword
    	};
    	Situation situation = Situation.none;
    	/**
    	 * debug
    	 */
        	public void onDebug(String where,String value) {
        		System.err.println(where+" "+value);
        	}
    	/**
    	 * feature
    	 */
        	public void onFeatureKeyword() {
        		onDebug("onFeatureKeyword","");
        	}
    	/**
    	 * feature
    	 * Declare reference as String 'string'
    	 */
        	public void onFeatureDeclareKeyword() {
        		onDebug("onFeatureDeclareKeyword","");
        	}
    	/**
    	 * feature
    	 * In order to test this feature
    	 * As an explicit system actor
    	 * I want to verify this behaviour
    	 */
        	public void onFeatureInOrderToKeyword() {
        		onDebug("onFeatureInOrderToKeyword","");
        	}
        	public void onFeatureAsAnKeyword() {
        		onDebug("onFeatureAsAnKeyword","");
        	}
        	public void onFeatureIWantToKeyword() {
        		onDebug("onFeatureIWantToKeyword","");
        	}
    	/**
    	 * feature
    	 * Register system with 'org.jbehaviour.plugins.system.SystemSteps' plugin
    	 */
        	public void onFeatureRegisterKeyword() {
        		onDebug("onFeatureRegisterKeyword","");
        	}
    	/**
    	 * feature
    	 * Include 'file.story'
    	 */
        	public void onFeatureIncludeKeyword() {
        		onDebug("onFeatureIncludeKeyword","");
        	}
        	/**
        	 * scenario
        	 * Scenario: Verify we can go to 'http://www.bing.com'
        	 */
        	public void onScenarioKeyword() {
        		onDebug("onScenarioKeyword","");
        	}
        	/**
        	 * simulate given, when then according to the
        	 * situation
        	 */
        	public void onAndKeyword() {
        		switch(situation) {
        			case onGivenKeyword:
        				onGivenKeyword();
        				break;
        			case onThenKeyword:
        				onThenKeyword();
        				break;
        			case onWhenKeyword:
        				onWhenKeyword();
        				break;
        		}
        	}
        	public void onGivenKeyword() {
        		situation = Situation.onGivenKeyword;
        		onDebug("onGivenKeyword","");
        	}
        	public void onWhenKeyword() {
        		situation = Situation.onWhenKeyword;
        		onDebug("onWhenKeyword","");
        	}
        	public void onThenKeyword() {
        		situation = Situation.onThenKeyword;
        		onDebug("onThenKeyword","");
        	}
        	public void onStoreKeyword() {
        		onDebug("onStoreKeyword","");
        	}
        	/**
        	 * implement any words analysis
        	 */
        	public void onAnyKeyword() {
        		onDebug("onAnyKeyword","");
        	}
        	/**
        	 * rewrite any implementation
        	 */
        	public void onAnyString(String value) {
        		onDebug("onAnyString",value);
        	}
        	public void onAnyIdentifier(String value) {
        		onDebug("onAnyIdentifier",value);
        	}
        	public void onAnyReference(String value) {
        		onDebug("onAnyReference",value);
        	}
        	public void onAnyTemplate(String value) {
        		onDebug("onAnyTemplate",value);
        	}
        	public void onAnyNumeric(String value) {
        		onDebug("onAnyNumeric",value);
        	}
        	public void onAnyJsonObject(String value) {
        		onDebug("onAnyJsonObject",value);
        	}


    public static class story_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "story"
    // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:218:1: story : feature ( scenario )* ;
    public final AnotherStoryGrammerParser.story_return story() throws RecognitionException {
        AnotherStoryGrammerParser.story_return retval = new AnotherStoryGrammerParser.story_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AnotherStoryGrammerParser.feature_return feature1 =null;

        AnotherStoryGrammerParser.scenario_return scenario2 =null;



        try { dbg.enterRule(getGrammarFileName(), "story");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(218, 0);

        try {
            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:219:2: ( feature ( scenario )* )
            dbg.enterAlt(1);

            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:219:4: feature ( scenario )*
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(219,4);
            pushFollow(FOLLOW_feature_in_story263);
            feature1=feature();

            state._fsp--;

            adaptor.addChild(root_0, feature1.getTree());
            dbg.location(219,12);
            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:219:12: ( scenario )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==SCENARIO) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:219:13: scenario
            	    {
            	    dbg.location(219,13);
            	    pushFollow(FOLLOW_scenario_in_story266);
            	    scenario2=scenario();

            	    state._fsp--;

            	    adaptor.addChild(root_0, scenario2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
         
        catch (Exception e) { 
        //throw e; 
        } 

        finally {
        	// do for sure before leaving
        }
        dbg.location(220, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "story");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "story"


    public static class feature_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "feature"
    // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:222:1: feature : FEATURE anyDecl featureDecl -> ^( TOK_FEATURE FEATURE anyDecl featureDecl ) ;
    public final AnotherStoryGrammerParser.feature_return feature() throws RecognitionException {
        AnotherStoryGrammerParser.feature_return retval = new AnotherStoryGrammerParser.feature_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token FEATURE3=null;
        AnotherStoryGrammerParser.anyDecl_return anyDecl4 =null;

        AnotherStoryGrammerParser.featureDecl_return featureDecl5 =null;


        CommonTree FEATURE3_tree=null;
        RewriteRuleTokenStream stream_FEATURE=new RewriteRuleTokenStream(adaptor,"token FEATURE");
        RewriteRuleSubtreeStream stream_anyDecl=new RewriteRuleSubtreeStream(adaptor,"rule anyDecl");
        RewriteRuleSubtreeStream stream_featureDecl=new RewriteRuleSubtreeStream(adaptor,"rule featureDecl");
        try { dbg.enterRule(getGrammarFileName(), "feature");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(222, 0);

        try {
            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:222:8: ( FEATURE anyDecl featureDecl -> ^( TOK_FEATURE FEATURE anyDecl featureDecl ) )
            dbg.enterAlt(1);

            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:222:10: FEATURE anyDecl featureDecl
            {
            dbg.location(222,10);
            FEATURE3=(Token)match(input,FEATURE,FOLLOW_FEATURE_in_feature277);  
            stream_FEATURE.add(FEATURE3);

            dbg.location(222,18);
            onFeatureKeyword();
            dbg.location(222,40);
            pushFollow(FOLLOW_anyDecl_in_feature281);
            anyDecl4=anyDecl();

            state._fsp--;

            stream_anyDecl.add(anyDecl4.getTree());
            dbg.location(222,48);
            pushFollow(FOLLOW_featureDecl_in_feature283);
            featureDecl5=featureDecl();

            state._fsp--;

            stream_featureDecl.add(featureDecl5.getTree());

            // AST REWRITE
            // elements: anyDecl, featureDecl, FEATURE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 223:4: -> ^( TOK_FEATURE FEATURE anyDecl featureDecl )
            {
                dbg.location(223,7);
                // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:223:7: ^( TOK_FEATURE FEATURE anyDecl featureDecl )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                dbg.location(223,9);
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(TOK_FEATURE, "TOK_FEATURE")
                , root_1);

                dbg.location(223,21);
                adaptor.addChild(root_1, 
                stream_FEATURE.nextNode()
                );
                dbg.location(223,29);
                adaptor.addChild(root_1, stream_anyDecl.nextTree());
                dbg.location(223,37);
                adaptor.addChild(root_1, stream_featureDecl.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
         
        catch (Exception e) { 
        //throw e; 
        } 

        finally {
        	// do for sure before leaving
        }
        dbg.location(224, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "feature");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "feature"


    public static class featureDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "featureDecl"
    // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:226:1: featureDecl : inOrderToDecl asAnDecl iWantToDecl ( includeDecl | registerDecl | declareDecl )* ;
    public final AnotherStoryGrammerParser.featureDecl_return featureDecl() throws RecognitionException {
        AnotherStoryGrammerParser.featureDecl_return retval = new AnotherStoryGrammerParser.featureDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        AnotherStoryGrammerParser.inOrderToDecl_return inOrderToDecl6 =null;

        AnotherStoryGrammerParser.asAnDecl_return asAnDecl7 =null;

        AnotherStoryGrammerParser.iWantToDecl_return iWantToDecl8 =null;

        AnotherStoryGrammerParser.includeDecl_return includeDecl9 =null;

        AnotherStoryGrammerParser.registerDecl_return registerDecl10 =null;

        AnotherStoryGrammerParser.declareDecl_return declareDecl11 =null;



        try { dbg.enterRule(getGrammarFileName(), "featureDecl");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(226, 0);

        try {
            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:227:2: ( inOrderToDecl asAnDecl iWantToDecl ( includeDecl | registerDecl | declareDecl )* )
            dbg.enterAlt(1);

            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:227:4: inOrderToDecl asAnDecl iWantToDecl ( includeDecl | registerDecl | declareDecl )*
            {
            root_0 = (CommonTree)adaptor.nil();


            dbg.location(227,4);
            pushFollow(FOLLOW_inOrderToDecl_in_featureDecl309);
            inOrderToDecl6=inOrderToDecl();

            state._fsp--;

            adaptor.addChild(root_0, inOrderToDecl6.getTree());
            dbg.location(227,18);
            pushFollow(FOLLOW_asAnDecl_in_featureDecl311);
            asAnDecl7=asAnDecl();

            state._fsp--;

            adaptor.addChild(root_0, asAnDecl7.getTree());
            dbg.location(227,27);
            pushFollow(FOLLOW_iWantToDecl_in_featureDecl313);
            iWantToDecl8=iWantToDecl();

            state._fsp--;

            adaptor.addChild(root_0, iWantToDecl8.getTree());
            dbg.location(227,39);
            // D:\\Workspace\\eclipse\\kepler-64\\git\\jbehave-tools\\jbehaviour-engine\\src\\main\\antlr3\\org\\jbehaviour\\antlr\\AnotherStoryGrammer.g:227:39: ( includeDecl | registerDecl | declareDecl )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=4;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                switch ( input.LA(1) ) {
                case INCLUDE:
                    {
                    alt2=1;
                    }
                    break;
                case REGISTER:
                    {
                    alt2=2;
                    }
                    break;
                case DECLARE:
                    {
                    alt2=3;
                    }
                    break;

                }

                } finally {dbg.exitDecision(2);}

